kubernetes/apps/kubevirt/kubevirt-manager/kubevirt-manager-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  selector:
    matchLabels:
      kubevirt-manager.io/version: v1.5.3
